<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ingredientsCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/lightMediumGray"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ingredientImageView"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:contentDescription="@string/ingredients_image"
                android:padding="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:flexDirection="column"
                app:justifyContent="space_evenly"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ingredientImageView"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/ingredientName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="@string/name"
                    android:textColor="@color/darker"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ingredientAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="6dp"
                        android:text="@string/_100" />

                    <TextView
                        android:id="@+id/ingredientUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grams" />

                </LinearLayout>

                <TextView
                    android:id="@+id/ingredientConsistency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consistency" />

                <TextView
                    android:id="@+id/ingredientOriginal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/original" />

            </com.google.android.flexbox.FlexboxLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>