<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/recipesFragment">

    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.example.foody.ui.fragments.recipes.RecipesFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_recipes" >
        <action
            android:id="@+id/action_recipesFragment_to_recipesBottomSheetFragment"
            app:destination="@id/recipesBottomSheetFragment" />
        <argument
            android:name="backFromBottomSheet"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_recipesFragment_to_detailsActivity"
            app:destination="@id/detailsActivity" />
    </fragment>
    <fragment
        android:id="@+id/favoriteRecipesFragment"
        android:name="com.example.foody.ui.fragments.favorite.FavoriteRecipesFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite_recipes" />
    <fragment
        android:id="@+id/foodJokeFragment"
        android:name="com.example.foody.ui.fragments.joke.FoodJokeFragment"
        android:label="@string/joke"
        tools:layout="@layout/fragment_food_joke" />
    <dialog
        android:id="@+id/recipesBottomSheetFragment"
        android:name="com.example.foody.ui.fragments.recipes.RecipesBottomSheetFragment"
        android:label="fragment_recipes_bottom_sheet"
        tools:layout="@layout/fragment_recipes_bottom_sheet" >
        <action
            android:id="@+id/action_recipesBottomSheetFragment_to_recipesFragment"
            app:destination="@id/recipesFragment" />
    </dialog>
    <activity
        android:id="@+id/detailsActivity"
        android:name="com.example.foody.ui.activities.DetailsActivity"
        android:label="activity_details"
        tools:layout="@layout/activity_details" >
        <argument
            android:name="result"
            app:argType="com.example.foody.models.food_recipe.Result" />
    </activity>

</navigation>